--- a/client/src/stylesheets/form.css
+++ b/client/src/stylesheets/form.css
@@ -1,7 +1,8 @@
 input{
     height: 40px;
-    width: 400px;
+    padding: 10px 20px;
     border: 2px solid #ccc;
+    width: 89%;
 }
 
 .ant-form-item{
