--- a/client/src/stylesheets/theme.css
+++ b/client/src/stylesheets/theme.css
@@ -12,3 +12,18 @@
 .bg-primary{
     background-color: var(--primary);
 }
+
+.bg-white{
+    background-color: #fff !important;
+}
+.text-white{
+    color: white !important;
+}
+
+.bg-success{
+    background-color: var(--success);
+}
+
+.bg-error{
+    background-color: var(--warning);
+}
