--- a/client/src/stylesheets/text.css
+++ b/client/src/stylesheets/text.css
@@ -27,3 +27,28 @@
     font-size: 0.75rem;
     line-height: 0.875rem;
 }
+
+h1{
+    margin-bottom: 0px !important;
+    padding-bottom: 0 !important;
+}
+.text-center{
+    text-align: center;
+}
+
+a{
+    color: var(--primary) !important;
+
+}
+a:hover{
+    color: var(--primary) !important;
+    text-decoration: underline !important;
+}
+
+i{
+    font-size: 18px !important;
+    cursor: pointer !important;
+}
+.underline{
+    text-decoration: underline !important;
+}
